# ticket_sales_bot

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
bot/: main.py
bot/handlers/: admin.py  broadcast.py  buy_ticket.py  common.py  my_tickets.py  scan_ticket.py
bot/handlers/buy/: __init__.py  menu.py  process.py
bot/handlers/events/: __init__.py  add.py  delete.py  menu.py
bot/handlers/help/: __init__.py  contact_manager.py
bot/handlers/users/: __init__.py  block.py  list.py  menu.py  role.py
bot/keyboards/: admin.py  main.py  manager.py
bot/middlewares/: admin_check.py  manager_check.py
bot/utils/: pdf_ticket.py
core/: config.py  database.py  models.py
core/migrations/: env.py
core/migrations/versions/: 562b405dcdbc_recreate_migrations.py  64d21eb25364_add_is_blocked_field_to_user.py  979c0f933058_add_is_manager_field_to_user.py  c8a566773883_add_cover_path_to_events.py  d00dc8fe1146_change_telegram_id_to_biginteger.py
deploy/: Dockerfile  docker-compose.yml
tests/: test_broadcast.py  test_buy_ticket.py  test_my_tickets.py  test_scan_ticket.py  test_start_command.py
